<resources>

    <!--Application-->
    <string name="app_name">Traveller</string>

    <string-array name="types_array">
        <item>Nature</item>
        <item>Camping</item>
        <item>Bicycle</item>
        <item>Arts and Culture</item>
        <item>Water</item>
    </string-array>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">The entered password is too short, please enter at least 6 characters!</string>
    <string name="auth_failed">Identification Failed, please enter your details again or register</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">New User? Register now for free!</string>
    <string name="btn_link_to_login">Already Registered? Login!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[Back <<]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Edit</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Log Out</string>
    <string name="lbl_forgot_password">Forgot your Password?</string>
    <string name="forgot_password_msg">We only need your Mail to reset your Password</string>
    <string name="title_activity_signup">Register</string>
    <string name="enter_mail">Please enter your email address</string>
    <string name="enter_password">Please enter the password</string>
    <string name="short_password">The entered password is too short, please enter at least 6 characters!</string>
    <string name="reset_instructions_sent">Password reset instructions have been sent to your Mail!</string>
    <string name="reset_failed">No user exists for the entered Email address</string>
    <string name="bad_mail_format">Please enter a valid Email address</string>
    <string name="log_out_success">You have logged out successfully</string>
    <string name="register_success">You have registered successfully</string>
    <string name="register_failure">An error occured with the Registration, please try again later</string>

    <!--Main Activity-->
    <string name="new_trip_button">Add</string>
    <string name="refresh_button">Refresh</string>

    <!--New Trip Activity-->
    <string name="new_trip_activity_label">Add new Trip</string>
    <string name="new_trip_save_button">Save</string>
    <string name="new_trip_cancel_button">Cancel</string>

    <!--Edit Trip Activity-->
    <string name="edit_trip_activity_label">Edit Trip</string>
    <string name="edit_trip_save_button">Save</string>
    <string name="edit_trip_delete_button">Delete</string>
    <string name="edit_trip_cancel_button">Cancel</string>

    <!--Trip Details Activity-->
    <string name="trip_details_activity_label">Trip Details</string>
    <string name="edit_trip_button">Edit</string>

    <!--General-->
    <string name="name">Name:</string>
    <string name="id">id:</string>
    <string name="type">Type:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="very_easy">Very Easy</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="trip_description">Description:</string>

    <!--Error Messages-->
    <string name="action_canceled_message">Action canceled</string>
    <string name="new_or_edit_trip_error_message">You must fill all fields!</string>
    <string name="new_trip_success_message">The trip created successfully</string>
    <string name="edit_trip_success_message">The trip edited successfully</string>
    <string name="edit_trip_error_message">Please change at least one field!</string>
    <string name="edit_trip_delete_message">The trip deleted successfully</string>
    <string name="image_loading_failed">An error occured while image loading</string>
    <string name="remove_trip_failed">An error occured while trip removing</string>
    <string name="edit_trip_failed">An error occured while trip editing</string>
    <string name="add_trip_failed">An error occured while trip adding</string>
    <string name="trips_fetch_failed">An error occured while trips fetching</string>
    <string name="no_network">There is no internet connection, you can only watch the trips list</string>

    <!--Other Messages-->
    <string name="refresh_button_message">The trips list is up to date</string>

</resources>
