<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oron.androidfinalproject.NewTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/new_trip_imageview"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/trip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/trips_details_margin"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/new_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/trips_details_margin"
                android:text="@string/type"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <Spinner
                android:id="@+id/types_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/trips_details_margin"
                android:layout_marginTop="10dp"
                android:text="@string/difficulty"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <SeekBar
                android:id="@+id/new_trip_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_trip_difficulty_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:text="Very Easy"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/trips_details_margin"
                android:text="@string/trip_description"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/new_trip_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="3"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_trip_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_trip_cancel_button"
            android:layout_weight="1"></Button>

        <Button
            android:id="@+id/new_trip_save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_trip_save_button"
            android:layout_weight="1"
            android:layout_gravity="right"></Button>

    </LinearLayout>

</LinearLayout>
