<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oron.androidfinalproject.EditTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/edit_trip_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trip"
            android:layout_margin="@dimen/trips_details_margin"/>

        <ProgressBar
            android:id="@+id/edit_trip_image_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:indeterminate="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_margin="@dimen/trips_details_margin"/>

            <EditText
                android:id="@+id/edit_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_margin="@dimen/trips_details_margin"/>

            <EditText
                android:id="@+id/edit_trip_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_margin="@dimen/trips_details_margin"/>

            <EditText
                android:id="@+id/edit_trip_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_margin="@dimen/trips_details_margin"/>

            <EditText
                android:id="@+id/edit_trip_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--<CheckBox-->
            <!--android:id="@+id/edit_trip_checked"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/trips_details_margin"/>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/birthDate"-->
                <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"-->
                <!--android:layout_margin="@dimen/trips_details_margin"/>-->

            <!--<com.example.oron.androidfinalproject.InputDateTextView-->
                <!--android:id="@+id/edit_trip_birth_date"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/trips_details_margin"/>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/birthTime"-->
            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"-->
            <!--android:layout_margin="@dimen/trips_details_margin"/>-->

        <!--<com.example.oron.androidfinalproject.InputTimeTextView-->
            <!--android:id="@+id/edit_trip_birth_time"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/trips_details_margin"/>-->

    <!--</LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_trip_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit_trip_cancel_button"
            android:layout_weight="1"></Button>

        <Button
            android:id="@+id/edit_trip_delete_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit_trip_delete_button"
            android:layout_weight="1" ></Button>

        <Button
            android:id="@+id/edit_trip_save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit_trip_save_button"
            android:layout_weight="1"
            android:layout_gravity="right"></Button>

    </LinearLayout>

</LinearLayout>
